# yggdrasil

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Yggdrasil-current-system-integration-design.md  Yggdrasil-development-spec.md  Yggdrasil-frontend-observation-design.md  Yggdrasil-implementation-plan.md  Yggdrasil-rework-plan.md  app.py  config.toml  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
.claude/skills/yggdrasil-agent/: SKILL.md
.claude/skills/yggdrasil-agent/agents/: openai.yaml
.claude/skills/yggdrasil-agent/references/: api-contract.md
data/: yggdrasil.duckdb.wal
docs/: agent-integration-guide.md
frontend/: index.html
src/api/middleware/: __init__.py  error_handler.py  request_logger.py  trace.py
src/application/: evaluation_service.py  observe_service.py  retrieval_service.py  ring_service.py  run_service.py  soil_service.py  tree_service.py
src/core/bootstrap/: app_context.py
src/core/config/: __init__.py  yggdrasil_config.py
src/core/dependency/: __init__.py  container.py
src/core/yggdrasil/: __init__.py  embedding.py  engine.py  models.py  retriever.py  sandbox.py  store.py
src/infra/database/: __init__.py
src/infra/execution/: __init__.py  skill_registry.py
src/infra/observability/: __init__.py  alert_service.py  log_service.py  logging_filters.py  metrics.py
src/infra/shared/: __init__.py  error_codes.py  http_client.py  response.py  tools.py
src/infra/vector/: __init__.py  chroma_index.py
src/jobs/: __init__.py  evaluation_job.py  inspection_job.py  outbox_job.py  season_manager.py
(+45 files in other folders)
