[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil"
version = "0.1.0"
description = "A living, breathing cognitive tree for self-evolving Agent brains"
requires-python = ">=3.11"
dependencies = [
    "quart~=0.19.6",
    "hypercorn",
    "quart-cors~=0.8.0",
    "aiomysql~=0.2.0",
    "pymysql",
    "aiohttp~=3.10.4",
    "requests~=2.32.3",
    "pydantic~=2.10.6",
    "pydantic-settings~=2.12.0",
    "dependency-injector~=4.48.3",
    "tenacity~=9.0.0",
    "prometheus-client~=0.21.0",
    "python-dotenv",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
